# join-review-fetcher

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  cli.py
src/analysis/: __init__.py  decision_factors.py  demographics.py  guide_analyzer.py
src/database/: __init__.py  connection.py  models.py
src/scrapers/: __init__.py  base.py  country_codes.py  http_helper.py  safaribookings.py  tripadvisor.py  validation.py
src/web/: __init__.py  app.py  routes.py  scraper_runner.py  sleep_manager.py  websocket.py
src/web/static/: index.html
src/web/static/js/: app.js
